--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<label for="name">Name: </label>
+		<input type="text" id="name" placeholder="name">
+		<br>
+		<label for="phone">Phone Number: </label>
+		<input type="text" id="phone" placeholder="Phone Number">
+		<br>
+		<label for="address">Address: </label>
+		<input type="text" id="address" placeholder="Address">
+		<br>
+		<label>Have you ever lived with a Dog before?</label><br>
+		<label for="checbox"> Yes </label>
+		<input type="checkbox" id="checkbox">
+		<label for="checbox"> No </label>
+		<input type="checkbox" id="checkbox">
+		<br>
+		<label>Please select your preferred breeds</label><br>
+		<select name="breed" id="multiSelect">
+			<option value="pitbull">Pitbull</option>
+			<option value="labra">Labra</option>
+			<option value="husky">Husky</option>
+		</select>
+		<br>
+		<button>Submit</button>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
