--- a/main.html
+++ b/main.html
@@ -18,20 +18,21 @@
 		<label for="address">Address: </label>
 		<input type="text" id="address" placeholder="Address">
 		<br>
-		<label>Have you ever lived with a Dog before?</label><br>
-		<label for="checbox"> Yes </label>
-		<input type="checkbox" id="checkbox">
-		<label for="checbox"> No </label>
-		<input type="checkbox" id="checkbox">
+		<label>
+			<input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+			Have you ever lived with a Dog before?
+		</label><br>
+		
 		<br>
-		<label>Please select your preferred breeds</label><br>
-		<select name="breed" id="multiSelect">
-			<option value="pitbull">Pitbull</option>
-			<option value="labra">Labra</option>
-			<option value="husky">Husky</option>
+		<label for="multiSelect">Please select your preferred breeds</label><br>
+		<select id="multiSelect" multiple>
+			<option>Pitbull</option>
+			<option>Labra</option>
+			<option>Husky</option>
+			<option>Doberman</option>
 		</select>
 		<br>
-		<button>Submit</button>
+		<input type="submit" value="Submit">
 		
 	</form>
     <script type="text/javascript" src="./script.js">
