--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<form>
+		<h2>Dog Adoption form</h2>
 		<label for="name">Name: </label>
 		<input type="text" id="name" placeholder="name">
 		<br>
