--- a/main.html
+++ b/main.html
@@ -26,11 +26,11 @@
 		
 		<br>
 		<label for="multiSelect">Please select your preferred breeds</label><br>
-		<select id="multiSelect" multiple>
-			<option>Pitbull</option>
-			<option>Labra</option>
-			<option>Husky</option>
-			<option>Doberman</option>
+		<select id="multiSelect" name="breed">
+			<option value="pitbull">Pitbull</option>
+			<option value="labra">Labra</option>
+			<option value="husky">Husky</option>
+			<option value="doberman">Doberman</option>
 		</select>
 		<br>
 		<input type="submit" value="Submit">
