--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<form>
 		<h2>Dog Adoption form</h2>
 		<label for="name">Name: </label>
-		<input type="text" id="name" placeholder="name">
+		<input type="text" id="name" placeholder="Name">
 		<br>
 		<label for="phone">Phone Number: </label>
 		<input type="text" id="phone" placeholder="Phone Number">
@@ -33,7 +33,7 @@
 			<option value="doberman">Doberman</option>
 		</select>
 		<br>
-		<input type="submit" value="Submit">
+		<input type="submit" value="Submit" id="button">
 		
 	</form>
     <script type="text/javascript" src="./script.js">
