--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
 			<option value="doberman">Doberman</option>
 		</select>
 		<br>
-		<input type="submit" value="Submit" id="button">
+		<input type="submit" value="Submit" id="submit">
 		
 	</form>
     <script type="text/javascript" src="./script.js">
